manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: hoptool-invoiceme-be
  name: hoptool-invoiceme-be
  namespace: dev
spec:
  ports:
  - name: http
    port: 443
    protocol: TCP
    targetPort: 8877
  selector:
    app: hoptool-invoiceme-be
